complete the demo with departments only

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "GraphQL": "Server=(localdb)\\MSSQLLocalDB;Database=DemoGraphQL;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
