working fine woth postgress

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "GraphQLPost": "Host=localhost;Database=DemoGraphQL;Username=postgres;Password=P@ssw0rd@123",
     "GraphQL": "Server=(localdb)\\MSSQLLocalDB;Database=DemoGraphQL;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
